--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <!-- Hero Section -->
   <section id="hero"
-    class="bg-[linear-gradient(rgba(19,19,24,0.50),rgba(19,19,24,0.50)),url('/images/banner_1.png')] bg-cover bg-no-repeat bg-center">
+    class="bg-[linear-gradient(rgba(19,19,24,0.50),rgba(19,19,24,0.50)),url(./images/banner_1.png)] bg-cover bg-no-repeat bg-center">
     <!-- Container -->
     <div class="container mx-auto px-3 py-40 ">
       <div class="text-white text-center">
