--- a/index.html
+++ b/index.html
@@ -64,7 +64,16 @@
       </div>
       <!-- Food Image Gallery Section -->
       <div id="foodContainer" class="grid grid-cols gap-8 lg:grid-cols-2">
-
+        <div class="card card-side bg-base-100 shadow-xl">
+          <figure><img src="images/k420tj1585565244.jpg" alt="Movie"/></figure>
+          <div class="card-body">
+            <h2 class="card-title">New movie is released!</h2>
+            <p>Click the button to watch on Jetflix app.</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-primary">Watch</button>
+            </div>
+          </div>
+        </div>
 
         <div class="flex border shadow-lg rounded-2xl overflow-hidden">
           <div class="w-2/4 lg:w-2/4">
@@ -86,6 +95,17 @@
             <button class=" mt-5 py-3 px-7 bg-[#FFC107] font-bold text-base rounded-lg shadow-lg">Details</button>
           </div>
         </div>
+        <div class="flex border shadow-lg rounded-2xl overflow-hidden">
+          <div class="w-2/4 lg:w-2/4">
+            <img class="w-full h-full" src="images/k420tj1585565244.jpg" alt="">
+          </div>
+          <div class="p-6 w-3/4 lg:w-3/4">
+            <h3 class="text-2xl font-bold mb-4">Chicken Handi</h3>
+            <p>There are many variations of passages of available, but the majority have suffered</p>
+            <button class=" mt-5 py-3 px-7 bg-[#FFC107] font-bold text-base rounded-lg shadow-lg">Details</button>
+          </div>
+        </div>
+        
 
 
       </div>
